--- a/docs/开发环境.md
+++ b/docs/开发环境.md
@@ -1,7 +1,11 @@
-# IDEA 自动下载源码
+# IntelliJ IDEA 自动下载源码
 Setting -> Maven -> Importing 选中 Automatically download 的两个多选框 Sources 和 Documentation
-# IntelliJ IDEA plugin
-Bytecode
+## Maven 镜像配置
 ```
-jclasslib
+    <mirror>
+      <id>alimaven</id>
+      <mirrorOf>central</mirrorOf>
+      <name>aliyun maven</name>
+      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>  
+    </mirror>
 ```
