--- a/docs/开发环境.md
+++ b/docs/开发环境.md
@@ -1,6 +1,66 @@
-# IntelliJ IDEA 自动下载源码
-Setting -> Maven -> Importing 选中 Automatically download 的两个多选框 Sources 和 Documentation
-## Maven 镜像配置
+# IntelliJ IDEA
+
+### IDEA 自动下载源码
+
+Setting -> Maven -> Importing 
+
+选中 Automatically download 的两个多选框 Sources 和 Documentation
+
+### 配置 注释
+
+File And Code Templates
+
+1) File And Code Templates
+2) File -> Settings -> Editor -> File And Code Templates
+3) 选中Class文件，然后再类的上面添加如下代码：
+```
+/**
+ * @author ${USER}
+ * @date ${DATE}
+ */
+ ```
+
+Live Templates
+
+1) File -> Settings -> Editor -> Live Templates
+2) 添加Template Group，名叫：brycehan
+3) 选中brycehan，添加Template, 参数：
+
+Abbreviation：/**
+
+Description：method comment
+
+Template text：
+```
+/**
+ *@author brycehan
+ *@date $date$
+ */
+```
+4) edit variables
+
+变量date，date("YYYY/M/dd")
+选中Skip if defined
+
+### SpringBoot 热部署之 spring-boot-devtools IDEA开启运行时编译配置
+
+设置1：
+
+File->Setting->Build,Execution,Deployment->Compile
+
+勾选：Make project automatically
+
+设置2：
+
+快捷键：ctrl+alt+shift+/
+
+选择：Registry
+
+勾选：compiler.automake.allow.when.app.running
+
+# Maven 配置
+
+### Maven 镜像配置
 ```
     <mirror>
       <id>alimaven</id>
@@ -9,3 +69,4 @@ Setting -> Maven -> Importing 选中 Automatically download 的两个多选框 S
       <url>http://maven.aliyun.com/nexus/content/groups/public/</url>  
     </mirror>
 ```
+
