添加总结文档

--- a/docs/开发环境.md
+++ b/docs/开发环境.md
@@ -1,5 +1,10 @@
 # IntelliJ IDEA
-
+### IDEA 配置用户名
+1 Help -> Edit Custom VM Options...在打开窗口添加下面一行代码
+```
+-Duser.name=Bryce Han
+```
+2 重启IDEA
 ### IDEA 自动下载源码
 
 Setting -> Maven -> Importing 
