--- a/bryce-cloud-system/src/main/resources/messages_zh_CN.properties
+++ b/bryce-cloud-system/src/main/resources/messages_zh_CN.properties
@@ -32,7 +32,7 @@ user.phone.number.not.valid=\u624B\u673A\u53F7\u683C\u5F0F\u9519\u8BEF
 # \u7528\u6237\u5BC6\u7801
 user.password.not.valid=6-30\u4E2A\u5B57\u7B26
 user.password.retry.limit.exceeded=\u5BC6\u7801\u8F93\u5165\u9519\u8BEF{}\u6B21\uFF0C\u5E10\u6237\u9501\u5B9A{}\u5206\u949F
-user.password.not.match=\u4FEE\u6539\u5BC6\u7801\u5931\u8D25\uFF0C\u5BC6\u7801\u9519\u8BEF
+user.password.not.match=\u539F\u5BC6\u7801\u9519\u8BEF
 user.password.same.as.old.error=\u65B0\u5BC6\u7801\u4E0D\u80FD\u4E0E\u65E7\u5BC6\u7801\u76F8\u540C
 user.password.change.error=\u4FEE\u6539\u5BC6\u7801\u5F02\u5E38\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458
 # \u7528\u6237\u9A8C\u8BC1\u7801
