feat(system): 新增用户角色分配功能并优化用户相关操作
- 新增用户角色分配相关接口和实现
- 优化用户删除逻辑，禁止删除当前登录用户
- 修复用户列表查询逻辑，移除对super_admin的判断
- 优化数据范围查询逻辑，增加非空判断
- 重置密码接口改为PATCH方法

--- a/bryce-cloud-common/bryce-common-core/src/main/resources/ValidationMessages_zh_CN.properties
+++ b/bryce-cloud-common/bryce-common-core/src/main/resources/ValidationMessages_zh_CN.properties
@@ -1,3 +1,4 @@
+# hibernate-validator-8.0.1.Final \u7248\u672C\u4FEE\u6539
 jakarta.validation.constraints.AssertFalse.message     = \u53EA\u80FD\u4E3A\u5047
 jakarta.validation.constraints.AssertTrue.message      = \u53EA\u80FD\u4E3A\u771F
 jakarta.validation.constraints.DecimalMax.message      = \u5FC5\u987B\u5C0F\u4E8E${inclusive == true ? '\u6216\u7B49\u4E8E' : ''}{value}
