--- a/bryce-cloud-common/bryce-common-core/src/main/resources/ValidationMessages_zh_CN.properties
+++ b/bryce-cloud-common/bryce-common-core/src/main/resources/ValidationMessages_zh_CN.properties
@@ -17,7 +17,7 @@ jakarta.validation.constraints.NotNull.message         = \u4E0D\u80FD\u4E3A\u7A7
 jakarta.validation.constraints.Null.message            = \u5FC5\u987B\u4E3A\u7A7A
 jakarta.validation.constraints.Past.message            = \u9700\u8981\u662F\u4E00\u4E2A\u8FC7\u53BB\u7684\u65F6\u95F4
 jakarta.validation.constraints.PastOrPresent.message   = \u9700\u8981\u662F\u4E00\u4E2A\u8FC7\u53BB\u6216\u73B0\u5728\u7684\u65F6\u95F4
-jakarta.validation.constraints.Pattern.message         = \u9700\u8981\u5339\u914D\u6B63\u5219\u8868\u8FBE\u5F0F"{regexp}"
+jakarta.validation.constraints.Pattern.message         = \u683C\u5F0F\u9519\u8BEF
 jakarta.validation.constraints.Positive.message        = \u5FC5\u987B\u662F\u6B63\u6570
 jakarta.validation.constraints.PositiveOrZero.message  = \u5FC5\u987B\u662F\u6B63\u6570\u6216\u96F6
 jakarta.validation.constraints.Size.message            = \u4E2A\u6570\u5FC5\u987B\u5728{min}\u548C{max}\u4E4B\u95F4
@@ -35,7 +35,7 @@ org.hibernate.validator.constraints.ModCheck.message                = ${validate
 org.hibernate.validator.constraints.NotBlank.message                = \u4E0D\u80FD\u4E3A\u7A7A
 org.hibernate.validator.constraints.NotEmpty.message                = \u4E0D\u80FD\u4E3A\u7A7A
 org.hibernate.validator.constraints.ParametersScriptAssert.message  = \u6267\u884C\u811A\u672C\u8868\u8FBE\u5F0F"{script}"\u6CA1\u6709\u8FD4\u56DE\u671F\u671B\u7ED3\u679C
-org.hibernate.validator.constraints.Range.message                   = \u9700\u8981\u5728{min}\u81F3{max}\u4E4B\u95F4
+org.hibernate.validator.constraints.Range.message                   = \u8303\u56F4\u9700\u8981\u5728{min}~{max}\u4E4B\u95F4
 org.hibernate.validator.constraints.ScriptAssert.message            = \u6267\u884C\u811A\u672C\u8868\u8FBE\u5F0F"{script}"\u6CA1\u6709\u8FD4\u56DE\u671F\u671B\u7ED3\u679C
 org.hibernate.validator.constraints.URL.message                     = \u9700\u8981\u662F\u4E00\u4E2A\u5408\u6CD5\u7684URL
 
